* Tue Jun 11 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.3-0
- Fix Puppet 6 support in the compliance_map function
- Dropped Puppet 4 support
- Fixed bug in the compliance report functionality that did not correctly
  record the percent compliant in each report summary

* Tue Mar 12 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.2-0
- Fix bug in Array merging

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 2.4.2-0
- Update the upper bound of stdlib to < 6.0.0

* Tue Mar 05 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 2.4.2-0
- Compliance_map_migrate improvements
  - Merge values from multiple input files.
  - Make 'check_header' consistent with other v2 data.
  - Reorder output to match other v2 data.
  - Fix controls, oval-ids, and identifiers output.
  - Normalize identifier strings.
  - Add option to supply confinement.
  - Use a strange YAML incantation to avoid anchors in the output.
  - Add option to append a string to the checks key.
  - Add additional helper scripts for v1 to v2 migration.

* Fri Nov 02 2018 Steven Pritchard <steven.pritchard@onyxpoint.com> - 2.4.1-0
- Fix the following keys:
  - simp::mountpoints::tmp::secure
  - simp::root_user::manage_group
  - simp::root_user::manage_perms
  - simp::root_user::manage_user
  - ssh::server::conf::pki

* Wed Oct 31 2018 Steven Pritchard <steven.pritchard@onyxpoint.com> - 2.4.1-0
- Fix the output of utils/compliance_map_migrate

* Fri Oct 19 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.4.1-0
- Fixed the following incorrect parameter types
  - simp::yum::schedule::minute
  - simp::yum::schedule::hour

* Thu Sep 20 2018 Dylan Cochran <dylan.cochran@onyxpoint.com> - 2.4.0-0
- Open-Source SCE version 2.0
  - Add bugfix for environments that are just Strings vs Environment objects.
  - Add compliance_markup::loaded_maps() function to return all of the loaded
    compliance data from the puppetserver for debugging