@@ -1,3 +1,10 @@
+* Mon Jun 24 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.4-0
+- Revert change from __dir__ to File.dirname(__FILE__) in compliance_map.rb due
+  to discovered incompatibility with some puppetserver configurations.
+- Add log statement if invalid JSON or YAML files are found when loading.
+- Remove management of simp::sssd::client::ldap_domain from the mappings since
+  use of LDAP is not guaranteed.
+
 * Tue Jun 11 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.3-0
 - Fix Puppet 6 support in the compliance_map function
 - Dropped Puppet 4 support
